[package]
name = "iron-spider"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dashmap = "6.1.0"
futures = "0.3.31"
governor = { version = "0.10.0", features = ["no_std"] }
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies", "blocking"] }
scraper = "0.23.1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
